lang/tests/compile_fail/error_code_on_struct.rs
use quasar_lang::prelude::*;

#[error_code]
pub struct NotAnEnum {
    pub field: u64,
}

fn main() {}
